2011-05-02  Christophe Coutand  <ecos@hotmail.co.uk>

	* cdl/adc_stm32.cdl:
	* src/adc_stm32.c:
	Make sure DMA clock is enabled. Fix ADC clock divider not set in
	stm32_adc_init_clock.

2009-03-05  Simon Kallweit  <simon.kallweit@intefo.ch>

	* src/adc_stm32.c:
	Fixed a bug in setup and usage of the timer.

2009-02-24  Simon Kallweit  <simon.kallweit@intefo.ch>

	* cdl/adc_stm32.cdl:
	* src/adc_stm32.c:
	* src/adc1.inl:
	* src/adc3.inl:
	STM32 ADC driver package created.

//===========================================================================
// ####GPLCOPYRIGHTBEGIN####                                                
// -------------------------------------------                              
// This file is part of eCos, the Embedded Configurable Operating System.   
// Copyright (C) 2009, 2011 Free Software Foundation, Inc.                  
//
// This program is free software; you can redistribute it and/or modify     
// it under the terms of the GNU General Public License as published by     
// the Free Software Foundation; either version 2 or (at your option) any   
// later version.                                                           
//
// This program is distributed in the hope that it will be useful, but      
// WITHOUT ANY WARRANTY; without even the implied warranty of               
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU        
// General Public License for more details.                                 
//
// You should have received a copy of the GNU General Public License        
// along with this program; if not, write to the                            
// Free Software Foundation, Inc., 51 Franklin Street,                      
// Fifth Floor, Boston, MA  02110-1301, USA.                                
// -------------------------------------------                              
// ####GPLCOPYRIGHTEND####                                                  