@@ -80,6 +80,8 @@ static const stm32_adc_setup stm32_adc_setup3 = {
     .pins           = stm32_adc_pins3,
     .extsel         = 4,
     .sample_time    = CYGNUM_DEVS_ADC_CORTEXM_STM32_ADC3_SAMPLE_TIME,
+    .adc_clkena     = CYGHWR_HAL_STM32_ADC3_CLOCK,
+    .tim_clkena     = CYGHWR_HAL_STM32_TIM8_CLOCK,
 };
 
 // ADC DMA buffer
